--- a/source/includes/CodeTemplates/_post.md.erb
+++ b/source/includes/CodeTemplates/_post.md.erb
@@ -187,6 +187,77 @@ func main() {
 
 }
 ```
+
+```swift
+import Foundation
+
+let headers = [
+<% if defined? extra_headers -%>
+  "Authorization": "Bearer <TOKEN>",
+  "Content-Type": "application/json",
+  <% extra_headers.each do |header| -%>
+   <%= "\"#{header[0]}\": \"#{header[1]}\"," %>
+  <% end -%>    
+  "cache-control": "no-cache"
+<% else %>
+  "Authorization": "Bearer <TOKEN>",
+  "Content-Type": "application/json",
+  "cache-control": "no-cache"
+<% end -%> 
+]
+let parameters = <REQUEST BODY> as [String : Any]
+
+let postData = JSONSerialization.data(withJSONObject: parameters, options: [])
+
+let request = NSMutableURLRequest(
+  url: NSURL(string: "http://rest.tsheets.com/api/v1/<%= endpoint %>")! as URL,
+  cachePolicy: .useProtocolCachePolicy,
+  timeoutInterval: 10.0)
+
+request.httpMethod = "POST"
+request.allHTTPHeaderFields = headers
+request.httpBody = postData as Data
+
+let session = URLSession.shared
+let dataTask = session.dataTask(
+  with: request as URLRequest,
+  completionHandler: {
+    (data, response, error) -> Void in
+    if (error != nil) {
+      print(error)
+    } else {
+      let httpResponse = response as? HTTPURLResponse
+      print(httpResponse)
+    }
+  }
+)
+
+dataTask.resume()
+```
+
+```perl
+use REST::Client;
+ 
+my $client = REST::Client->new();
+
+$client->addHeader('Authorization', 'Bearer <TOKEN>');
+$client->addHeader('Content-Type', 'application/json');
+$client->addHeader('charset', 'UTF-8');
+$client->addHeader('Accept', 'application/json');
+<% if defined? extra_headers -%>
+  <% extra_headers.each do |header| -%>
+<%= "$client->addHeader('#{header[0]}', '#{header[1]}');" %>
+  <% end -%>    
+<% end %>
+
+$req = '<REQUEST BODY>';
+
+$url="http://rest.tsheets.com/api/v1/<%= endpoint %>"; 
+
+$client->POST($url, $req);
+print $client->responseContent();
+print $client->responseHeader('ResponseHeader');
+```
 <% if defined?(response_body) -%>
 > Response Format
 
