Adding code samples for VB.NET and AJAX

--- a/source/includes/CodeTemplates/_delete.md.erb
+++ b/source/includes/CodeTemplates/_delete.md.erb
@@ -23,6 +23,13 @@ request.AddHeader("Authorization", "Bearer <TOKEN>");
 IRestResponse response = client.Execute(request);
 ```
 
+```vb
+<%= "Dim client = New RestClient(\"#{@full_url}\")" %>
+Dim request = New RestRequest(Method.[DELETE])
+request.AddHeader("Authorization", "Bearer <TOKEN>")
+Dim response As IRestResponse = client.Execute(request)
+```
+
 ```java
 OkHttpClient client = new OkHttpClient();
 
@@ -35,7 +42,24 @@ Request request = new Request.Builder()
 Response response = client.newCall(request).execute();
 ```
 
-```javascript
+```javascript--browser
+var settings = {
+  "async": true,
+  "crossDomain": true,
+  <%= "\"url\": \"#{@full_url}\"," %>
+  "method": "DELETE",
+  "headers": {
+    "Authorization": "Bearer <TOKEN>",
+    "cache-control": "no-cache"
+  }
+}
+
+$.ajax(settings).done(function (response) {
+  console.log(response);
+});
+```
+
+```javascript--node
 var request = require("request");
 
 var options = { method: 'DELETE',
