--- a/source/includes/Overview/_changelog.md.erb
+++ b/source/includes/Overview/_changelog.md.erb
@@ -3,4 +3,4 @@
 | Date   | Description      |
 | :----- | :--------------- |
 | 2019-02-24 | Initial Content Creation |
-| 2019-03-02 | Added Perl & Swift Code Samples |
+| 2019-03-02 | Added Perl & Swift Code Samples<br/>Added VB.NET & AJAX Code Samples |
