--- a/source/includes/CodeTemplates/_put.md.erb
+++ b/source/includes/CodeTemplates/_put.md.erb
@@ -27,6 +27,14 @@ request.AddHeader("Authorization", "Bearer <TOKEN>");
 IRestResponse response = client.Execute(request);
 ```
 
+```vb
+Dim client = New RestClient("https://rest.tsheets.com/api/v1/<%= endpoint %>")
+Dim request = New RestRequest(Method.PUT)
+request.AddHeader("Authorization", "Bearer <TOKEN>")
+request.AddHeader("Content-Type", "application/json")
+Dim response As IRestResponse = client.Execute(request)
+```
+
 ```java
 OkHttpClient client = new OkHttpClient();
 
@@ -42,7 +50,26 @@ Request request = new Request.Builder()
 Response response = client.newCall(request).execute();
 ```
 
-```javascript
+```javascript--browser
+var settings = {
+  "async": true,
+  "crossDomain": true,
+  <%= "\"url\": \"#{@full_url}\"," %>
+  "method": "PUT",
+  "headers": {
+    "Authorization": "Bearer <TOKEN>",
+    "cache-control": "no-cache"
+  },
+  "processData": false,
+  "data": "<REQUEST BODY>"
+}
+
+$.ajax(settings).done(function (response) {
+  console.log(response);
+});
+```
+
+```javascript--node
 var request = require("request");
 
 var options = { method: 'PUT',
