--- a/source/includes/Overview/_welcome.md.erb
+++ b/source/includes/Overview/_welcome.md.erb
@@ -1,6 +1,6 @@
 # Welcome
 
-Thank you for visiting the TSheets API Documentation Portal!  We hope you'll easily find everything you need. If not, please let us know and we'll make it right.  Whether you're running into a problem, have feedback or a great suggestion, or would just like to talk through integration scenarios, we'd [love to hear from you](mailto:SBSEGTimeTrackingSegment-Partnerships@intuit.com).
+Thank you for visiting the TSheets API Documentation Portal!  We hope you'll easily find everything you need. If not, please let us know and we'll make it right.  Whether you're running into a problem, have feedback or a great suggestion, or would just like to talk through integration scenarios, we'd [love to hear from you](mailto:help@tsheets.com?cc=SBSEGTimeTrackingSegment-Partnerships@intuit.com).
 
 ## Introduction
 The TSheets API provides programmatic access to the same time tracking, managing, scheduling and reporting features as our top-rated web-based and mobile apps.  With it you can quickly build integrations, for example to automatically sync employee time tracking data for payroll and invoicing. Or, create new scheduling or project management solutions.  The options are unlimited.  For inspiration, check out the amazing integrations our partners have built on our [App Marketplace](https://www.tsheets.com/app-marketplace).  They're solving real business needs and saving customers time and money.
@@ -87,7 +87,7 @@ This documentation explains the format for calls to the TSheets API with code sn
 
  * [PHP Helper Library](https://github.com/tsheets/api_phplib) (hosted on GitHub)</span>
  * [C#/.NET Helper Library](https://github.com/tsheets/api_dotnet) (hosted on GitHub)
- * [Request a library for your favorite language](mailto:SBSEGTimeTrackingSegment-Partnerships@intuit.com?subject=API Helper Library Request)
+ * [Request a library for your favorite language](mailto:help@tsheets.com?subject=API Helper Library Request&cc=SBSEGTimeTrackingSegment-Partnerships@intuit.com)
 
  While a helper library can make it easier to consume the API, it is certainly not necessary and the API is still very straight-forward to use even without one. Simply use a built-in http class or library for your language of choice.
 
@@ -107,7 +107,7 @@ Here are a few of the things we'll be looking for before allowing your applicati
  * Do you have a mechanism in place for refreshing OAuth tokens before they expire - to prevent people from needing to log in again?
  * If you are unable to refresh the token, what is the user experience for logging in and renewing it?
  * What permissions are required for your app to do its work? Are you checking those permissions for the user tied to the OAuth token - and not just assuming you'll have it?
- * When checking for changes to data, are you using the [`last_modified_timestamps`](#last-modified) endpoint?
+ * When checking for changes to data, are you using the [`last_modified_timestamps`](#last-modified-timestamps) endpoint?
  * How are changes to data being checked from your app? Polling? Manually? Both? If you're polling, how often?
  * If client doesn't have a TSheets account, are you utilizing the account creation mechanism available via the OAuth flow?
  * On initial sync, are you getting all data? On subsequent syncs, are you utilizing last_modified times to pull data?
@@ -115,4 +115,4 @@ Here are a few of the things we'll be looking for before allowing your applicati
 
 ## Getting Help
 
-If you encounter any problems consuming the API or have suggestions please feel free to contact us at [SBSEGTimeTrackingSegment-Partnerships@intuit.com](SBSEGTimeTrackingSegment-Partnerships@intuit.com)
+If you encounter any problems consuming the API or have suggestions please feel free to contact us at [help@tsheets.com](mailto:help@sheets.com?cc=SBSEGTimeTrackingSegment-Partnerships@intuit.com)
