--- a/source/includes/APIReference/Files/_delete.md.erb
+++ b/source/includes/APIReference/Files/_delete.md.erb
@@ -24,6 +24,6 @@ Each file that is deleted will come back with a `_status_code` and `_status_mess
 | <code class="level400">417</code> | Expectation Failed. Something went wrong for this file. See the `_status_extra` value for more detail. |
 
 <aside class="notice">
-The maximum batch size is <i>50</i> files. If exceeded, a <code>413: Request entity too large</code> HTTP response will be returned.
+The maximum batch size is <i>50</i> files. If exceeded, a <code class="standout">413: Request entity too large</code> HTTP response will be returned.
 </aside>
 
