--- a/source/includes/APIReference/Reports/_payroll_by_jobcode.md.erb
+++ b/source/includes/APIReference/Reports/_payroll_by_jobcode.md.erb
@@ -30,18 +30,10 @@ _Pass an an object of filters as the value to a 'data' property (see example)._
 | **end_date**<br/>required | _String_ | `YYYY-MM-DD` formatted date. Any time with a date falling on or before this date will be included. |
 | **user_ids**<br/>optional | _Int_ | A comma-separated list of user ids. Only time for these users will be included. |
 | **group_ids**<br/>optional | _Int_ | A comma-separated list of group ids. Only time for users from these groups will be included. |
-| **advanced_overtime**<br/>(see notes below) | _String_ | 'yes' or 'no'. If 'yes', overtime will be formatted such that it includes the time for individual multipliers and can support more than just 1.5x (ot) and 2x (dt) overtime. |
+| **advanced_overtime**<br/>optional | _String_ | 'yes' or 'no'. If 'yes', overtime will be formatted such that it includes the time for individual multipliers and can support more than just 1.5x (ot) and 2x (dt) overtime.<br/><br/>_Note: For `advanced_overtime` the default for api keys created before Oct 25th 2017 is 'no', however, the default for api keys created after this date is 'yes' and attempting to pass this parameter with a value of 'no' will result in an exception._<br/><br/>_Note: The `advanced_overtime` setting is required to be passed as 'yes' if the Overtime add-on is installed and rates other than the standard 1.5x and 2x rates are defined. This is enforced so that incorrect overtime values that do not comply with the standard "total_ot_seconds" (1.5x) and "total_dt_seconds" (2x) rates are not missed._ |
 
 <aside class="notice">
 The date range defined by <code>start_date</code> and <code>end_date</code> must not exceed 31 days.
-</aside>
-
-<aside class="notice">
-For <code>advanced_overtime</code> the default for api keys created before Oct 25th 2017 is 'no', however, the default for api keys created after this date is 'yes' and attempting to pass this parameter with a value of 'no' will result in an exception.
-</aside>
-
-<aside class="notice">
-The <code>advanced_overtime</code> setting is required to be passed as 'yes' if the Overtime add-on is installed and rates other than the standard 1.5x and 2x rates are defined. This is enforced so that incorrect overtime values that do not comply with the standard "total_ot_seconds" (1.5x) and "total_dt_seconds" (2x) rates are not missed.
 </aside>
 
 ### Understanding the Output
