--- a/source/includes/APIReference/CustomFieldItems/_create.md.erb
+++ b/source/includes/APIReference/CustomFieldItems/_create.md.erb
@@ -27,7 +27,7 @@ Each customfielditem that is created will come back with a `_status_code` and `_
 | <code class="level400">417</code> | Expectation Failed. Something was wrong or missing with the properties supplied for this customfielditem. See the `_status_extra` value for more detail. |
 
 <aside class="notice">
-The maximum batch size is <i>50</i> customfielditems. If exceeded, a <code>413: Request entity too large</code> HTTP response will be returned.
+The maximum batch size is <i>50</i> customfielditems. If exceeded, a <code class="standout">413: Request entity too large</code> HTTP response will be returned.
 </aside>
 
 
