--- a/source/includes/APIReference/CustomFieldItems/_custom_field_items.md.erb
+++ b/source/includes/APIReference/CustomFieldItems/_custom_field_items.md.erb
@@ -13,13 +13,9 @@ Following is a list of the properties that belong to a customfield object, and a
 | **id**<br/>read-only | _Int_ | Id of customfielditem. |
 | **customfield_id**<br/>read-only | _Int_ | Id for the customfield that this item belongs to. |
 | **name**<br/>read-write | _String_ | Name of the customfielditem. |
-| **short_code**<br/>read-write | _String_ | This is a short alias that is associated with the customfielditem. It may only consist of letters and numbers. |
+| **short_code**<br/>read-write | _String_ | This is a short alias that is associated with the customfielditem. It may only consist of letters and numbers. _Note: Custom Field Item <code>short_code</code> values must be unique for each TSheets account._ |
 | **active**<br/>read-write | _Boolean_ | _true_ or _false_. If _false_, the customfielditem is considered archived. |
 | **last_modified**<br/>read-only | _String_ | Date/time when this customfielditem was last modified, in ISO 8601 format (`YYYY-MM-DDThh:mm:ss±hh:mm`). |
 | **created**<br/>read-only | _String_ | Date/time when  this customfielditem was created, in ISO 8601 format (`YYYY-MM-DDThh:mm:ss±hh:mm`). |
 | **required_customfields**<br/>read-write | _Int[]_ | Ids of [customfields](#the-customfield-object) that should be displayed when this customfielditem is selected on a timecard. |
-
-<aside class="notice">
-Custom Field Item <code>short_code</code> values must be unique for each TSheets account.
-</aside>
 
