--- a/source/includes/APIReference/CustomFieldItems/_update.md.erb
+++ b/source/includes/APIReference/CustomFieldItems/_update.md.erb
@@ -26,5 +26,5 @@ Each customfielditem that is edited will come back with a `_status_code` and `_s
 | <code class="level400">417</code> | Expectation Failed. Something was wrong or missing with the properties supplied for this customfielditem. See the `_status_extra` value for more detail. |
 
 <aside class="notice">
-The maximum batch size is <i>50</i> customfielditems. If exceeded, a <code>413: Request entity too large</code> HTTP response will be returned.
+The maximum batch size is <i>50</i> customfielditems. If exceeded, a <code class="standout">413: Request entity too large</code> HTTP response will be returned.
 </aside>
