--- a/source/includes/APIReference/Jobcodes/_jobcodes.md.erb
+++ b/source/includes/APIReference/Jobcodes/_jobcodes.md.erb
@@ -11,8 +11,8 @@ Following is a list of the properties that belong to a jobcode object, and a des
 | **id**<br/>read-only | _Int_ | Id of jobcode. |
 | **parent_id**<br/>read-write | _Int_ | Id of this jobcode's parent. 0 if it's top-level. |
 | **name**<br/>read-write | _String_ | Name of the jobcode. Cannot be more than 64 characters and must be unique for all jobcodes that share the same `parent_id`. |
-| **short_code**<br/>read-write | _String_ | This is a shortened code or alias that is associated with the jobcode. It may only consist of letters and numbers. Must be unique for all jobcodes that share the same `parent_id`. _(See note below)_ |
-| **type**<br/>read/write-once | _String_ | Indicates jobcode type. One of 'regular', 'pto', 'paid_break', or 'unpaid_break'. Additional types may be added in the future. _(See note below)_ |
+| **short_code**<br/>read-write | _String_ | This is a shortened code or alias that is associated with the jobcode. It may only consist of letters and numbers. Must be unique for all jobcodes that share the same `parent_id`.<br/>_Note: If the Dial-in Add-on is installed, this field may only consist of numbers since it is used for jobcode selection from touch-tone phones._ |
+| **type**<br/>read/write-once | _String_ | Indicates jobcode type. One of 'regular', 'pto', 'paid_break', or 'unpaid_break'. Additional types may be added in the future.<br/><ul><li>'pto' type jobcodes are used for PTO (Paid Time Off, i.e. Vacation, Holiday) time entries. They are only allowed with a `parent_id` of _0_ (i.e. top-level).</li><li>'paid_break' and 'unpaid_break' type jobcodes are used in conjunction with the Breaks Add-On. These types of jobcodes may not be created/edited via the API. They are managed via the Breaks Add-On.</li></ul> |
 | **billable**<br/>read-write | _Boolean_ | true or false. Indicates whether this jobcode is billable or not. |
 | **billable_rate**<br/>read-write | _Float_ | Dollar amount associated with this jobcode for billing purposes. Only effective if billable is _true_. |
 | **has_children**<br/>read-only | _Boolean_ | true or false. If true, there are jobcodes that exist underneath this one, so this jobcode should be treated as a container or folder with children jobcodes underneath it. |
@@ -23,14 +23,3 @@ Following is a list of the properties that belong to a jobcode object, and a des
 | **last_modified**<br/>read-only | _String_ | Date/time when this jobcode was last modified, in ISO 8601 format (`YYYY-MM-DDThh:mm:ss±hh:mm`) |
 | **created**<br/>read-only | _String_ | Date/time when this jobcode was created, in ISO 8601 format (`YYYY-MM-DDThh:mm:ss±hh:mm`) |
 
-<aside class="notice">
-For the <code>short_code</code> property, if the Dial-in Add-on is installed, this field may only consist of numbers since it is used for jobcode selection from touch-tone phones.
-</aside>
-
-<aside class="notice">
-For the <code>type</code> property:
-<ul>
-	<li>'pto' type jobcodes are used for PTO (Paid Time Off, i.e. Vacation, Holiday) time entries. They are only allowed with a `parent_id` of 0 (i.e. top-level).</li>
-	<li>'paid_break' and 'unpaid_break' type jobcodes are used in conjunction with the Breaks Add-On. These types of jobcodes may not be created/edited via the API. They are managed via the Breaks Add-On.</li>
-</ul>
-</aside>
