--- a/source/includes/APIReference/Timesheets/_update.md.erb
+++ b/source/includes/APIReference/Timesheets/_update.md.erb
@@ -21,7 +21,7 @@ When editing a [timesheet](#the-timesheet-object), you must uniquely identify th
 | **id**<br/>required | _Int_ | Timesheet id of the timesheet that you are going to edit. |
 | **jobcode_id**<br/>optional | _Int_ | Jobcode id that you'd like this timesheet to be recorded against. |
 | **notes**<br/>optional | _String_ | Notes you'd like associated with this timesheet. |
-| **customfields**<br/>optional | _JSON Object_ | A key/value map of customfield ids to the customfield items that are associated with the timesheet. _(See note below)_ |
+| **customfields**<br/>optional | _JSON Object_ | A key/value map of customfield ids to the customfield items that are associated with the timesheet.<br/><br/>_Note: The customfields property is only applicable if the Advanced Tracking Add-on is installed._ |
 | **attached_files**<br/>optional | _Array_ | Ids of files attached to this timesheet. |
 
 <br/>
@@ -52,10 +52,6 @@ Each timesheet that is edited will come back with a `_status_code` and `_status_
 | <code class="level400">404</code> | Not Found. Timesheet either has never existed or has been deleted. |
 | <code class="level400">409</code> | Conflict. Because a conflict would have resulted in the change requested, the timesheet was not modified. The unmodified timesheet's properties will be included in the response, to make it easy to revert to the unmodified version of the timesheet. |
 | <code class="level400">417</code> | Expectation Failed. Something was wrong or missing with the properties supplied for this timesheet. See the `_status_extra` value for more detail. |
-
-<aside class="notice">
-The customfields property is only applicable if the <i>Advanced Tracking Add-on</i> is installed.
-</aside>
 
 <aside class="notice">
 The maximum batch size is <i>50</i> timesheets. If exceeded, a <code class="standout">413: Request entity too large</code> HTTP response will be returned.
