--- a/source/includes/APIReference/Users/_update.md.erb
+++ b/source/includes/APIReference/Users/_update.md.erb
@@ -33,5 +33,5 @@ Each user that is edited will come back with a `_status_code` and `_status_messa
 | <code class="level400">417</code> | Expectation Failed. Something was wrong or missing with the properties supplied for this user. See the `_status_extra` value for more detail. |
 
 <aside class="notice">
-The maximum batch size is <i>50</i> users. If exceeded, a <code>413: Request entity too large</code> HTTP response will be returned.
+The maximum batch size is <i>50</i> users. If exceeded, a <code class="standout">413: Request entity too large</code> HTTP response will be returned.
 </aside>
