Adding an aside to explain that payroll_id can be found in supplemental data, as well as fixing the previously truncated example to include the field.  Why? ADP Integrations team assumed the Payroll Report API endpoint didn't include the payroll_id field, and was making a call to the user object to first get the Payroll_id, then making another request to the Payroll Report. They were getting HTTP 429 (Too Many Requests) Their API calls should drop by about 50% once they start getting the payroll_id from the payroll report.

--- a/source/includes/APIReference/Reports/_payroll.md.erb
+++ b/source/includes/APIReference/Reports/_payroll.md.erb
@@ -28,3 +28,7 @@ _Pass an an object of filters as the value to a 'data' property (see example)._
 See explanation of response layouts to the right.
 
 Notice in the advanced overtime layout that the `total_ot_seconds` and `total_dt_seconds` values have been replaced by the `overtime_seconds` and `fixed_rate_seconds` objects in each instance. In the `overtime_seconds` object the key is the multiplier rate and the value is the number of seconds of overtime at that rate (i.e 14400 seconds at 1.5x). In the `fixed_rate_seconds` object, the key is the additional rate amount to add to the employee's hourly rate and the value is the time in seconds.
+
+<aside class="notice">
+The <code>payroll_id</code> value for each user can be found within the <code>supplemental_data</code> section of the response.  See example.
+</aside>
